refact code with tables changes
